--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/overlays.css">
     <link rel="stylesheet" href="styles/configuration.css">
+    <link rel="stylesheet" href="styles/game.css">
 </head>
 <body>
     <div class="back-drop"></div>
@@ -53,26 +54,26 @@
             <button class="btn">Start New Game</button>
         </section>
 
-        <section class="active-game">
-            <article>
-                <h3>You Won <span>Player Name</span>!</h3>
-                <p>Click 'Start New Gmae' tu restart a new game</p>
+        <section id="active-game">
+            <article id="game-over">
+                <h2>You Won <span>Player Name</span>!</h2>
+                <p>Click 'Start New Gmae' to restart a new game</p>
             </article>
 
-            <p>It's your turn <span>Player Name</span>!</p>
+            <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
 
-            <ol>
+            <ol id="game-board">
                 <li></li>
-                <li></li>
-                <li></li>
-
-                <li></li>
-                <li></li>
+                <li class="disabled">O</li>
                 <li></li>
 
+                <li class="disabled">X</li>
                 <li></li>
                 <li></li>
+
+                <li class="disabled">O</li>
                 <li></li>
+                <li class="disabled">X</li>
             </ol>
         </section>
     </main>
