--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <label for="playername">Player Name</label>
                     <input type="text" name="playername" id="playername">
                 </div>
-                <button type="button" class="btn btn-alt">Cancel</button>
+                <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                 <button type="submit" class="btn">Confirm</button>
             </form>
         </aside>
@@ -39,7 +39,7 @@
                         <h2>PLAYER 1</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">X</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
                     </article>
                 </li>
                 <li>
@@ -47,7 +47,7 @@
                         <h2>PLAYER 2</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">O</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
                     </article>
                 </li>
             </ol>
@@ -77,5 +77,8 @@
             </ol>
         </section>
     </main>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/game.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
