--- a/index.html
+++ b/index.html
@@ -23,35 +23,36 @@
     <main>
         <aside class="modal" id="config-overlay">
             <h2>Choose Your Name</h2>
-            <form action="">
+            <form id="form">
                 <div class="form-control">
                     <label for="playername">Player Name</label>
-                    <input type="text" name="playername" id="playername">
+                    <input type="text" name="playername" id="playername" required>
                 </div>
-                <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
+                <p id="config-error"></p>
+                <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                 <button type="submit" class="btn">Confirm</button>
             </form>
         </aside>
         <section id="game-configuration">
             <ol>
                 <li>
-                    <article>
+                    <article id="player-1-data">
                         <h2>PLAYER 1</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">X</p>
-                        <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-1-btn" data-playerid="1">Edit</button>
                     </article>
                 </li>
                 <li>
-                    <article>
+                    <article id="player-2-data">
                         <h2>PLAYER 2</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">O</p>
-                        <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-2-btn" data-playerid="2">Edit</button>
                     </article>
                 </li>
             </ol>
-            <button class="btn">Start New Game</button>
+            <button class="btn" id="start-game-btn">Start New Game</button>
         </section>
 
         <section id="active-game">
@@ -64,16 +65,16 @@
 
             <ol id="game-board">
                 <li></li>
-                <li class="disabled">O</li>
-                <li></li>
-
-                <li class="disabled">X</li>
                 <li></li>
                 <li></li>
 
-                <li class="disabled">O</li>
                 <li></li>
-                <li class="disabled">X</li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
             </ol>
         </section>
     </main>
