Finalized the project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="back-drop"></div>
     <header id="main-header">
-        <h1>Play TIC TAC TOE</h1>
+        <h1>(X O X) Play TIC TAC TOE (O X O)</h1>
         <p>Build with using HTML, CSS, and Javascript only</p>
     </header>
 
@@ -64,17 +64,17 @@
             <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
 
             <ol id="game-board">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-row="0" data-col="0"></li>
+                <li data-row="0" data-col="1"></li>
+                <li data-row="0" data-col="2"></li>
 
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-row="1" data-col="0"></li>
+                <li data-row="1" data-col="1"></li>
+                <li data-row="1" data-col="2"></li>
 
-                <li></li>
-                <li></li>
-                <li></li>
+                <li data-row="2" data-col="0"></li>
+                <li data-row="2" data-col="1"></li>
+                <li data-row="2" data-col="2"></li>
             </ol>
         </section>
     </main>
