--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section id="active-game">
             <article id="game-over">
                 <h2>You Won <span>Player Name</span>!</h2>
-                <p>Click 'Start New Gmae' to restart a new game</p>
+                <p>Click 'Start New Game' to restart a new game</p>
             </article>
 
             <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
